--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,53 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical"
+    android:background="@drawable/background_image_main"
     android:keepScreenOn="true"
-    android:background="@drawable/background_image_main">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
 
-    <ImageButton
-        android:id="@+id/imagebutton_about"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_about"
-        android:backgroundTint="#0000"
-        android:layout_gravity="right"
-        />
-
-    <LinearLayout
-        android:layout_width="643dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageButton
-                android:id="@+id/imagebutton_play"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:adjustViewBounds="true"
-                android:backgroundTint="#0000"
-                android:onClick="playGameOnClick"
-                android:scaleType="fitCenter"
-                android:src="@drawable/button_play_green" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imagebutton_play"
-                android:layout_centerInParent="true"
-                android:fontFamily="serif"
-                android:text="PLAY"
-                android:textColor="#FFFFFF"
-                android:textSize="28sp" />
-        </RelativeLayout>
-    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/layout_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:id="@+id/fragment_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></FrameLayout>
+    </RelativeLayout>
 
 </LinearLayout>
