--- a/app/src/main/res/layout-land/fragment_home_screen.xml
+++ b/app/src/main/res/layout-land/fragment_home_screen.xml
@@ -22,6 +22,7 @@
         android:orientation="horizontal">
 
         <ImageButton
+            android:onClick="onClickOpenStatistics"
             android:layout_weight="1"
             android:id="@+id/imagebutton_previousgames"
             android:layout_width="match_parent"
