--- a/app/src/main/res/layout-land/fragment_new_game.xml
+++ b/app/src/main/res/layout-land/fragment_new_game.xml
@@ -26,13 +26,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <LinearLayout
-                android:layout_margin="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="25dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
-                <EditText
+                <AutoCompleteTextView
+                    android:id="@+id/autocomplete_player1name"
                     android:hint="Player 1 name"
                     android:gravity="center"
                     android:fontFamily="cursive"
@@ -42,7 +44,19 @@
                     android:textSize="28sp"
                     android:imeOptions="flagNoExtractUi"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"  />
+
+                <!--<EditText
+                    android:hint="Player 1 name"
+                    android:gravity="center"
+                    android:fontFamily="cursive"
+                    android:inputType="textCapWords"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:textSize="28sp"
+                    android:imeOptions="flagNoExtractUi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />-->
 
                 <Spinner
                     android:id="@+id/spinner_player1"
@@ -57,22 +71,25 @@
 
             </LinearLayout>
             <LinearLayout
-                android:layout_margin="20dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
-                <EditText
+                <AutoCompleteTextView
+                    android:id="@+id/autocomplete_player2name"
                     android:hint="Player 2 name"
                     android:gravity="center"
                     android:fontFamily="cursive"
                     android:inputType="textCapWords"
+                    android:textColor="#000000"
                     android:textStyle="bold"
                     android:textSize="28sp"
                     android:imeOptions="flagNoExtractUi"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"  />
 
                 <Spinner
                     android:id="@+id/spinner_player2"
@@ -88,6 +105,7 @@
         </LinearLayout>
 
         <Button
+            android:onClick="playGameOnClick"
             android:layout_gravity="center"
             android:text="Start"
             style="@style/medieval_button"
