--- a/app/src/main/res/layout-land/match_pair_item.xml
+++ b/app/src/main/res/layout-land/match_pair_item.xml
@@ -6,19 +6,23 @@
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
-    tools:ignore="MissingDefaultResource">
+    android:backgroundTint="#80ffcc99"
+    tools:ignore="MissingDefaultResource"
+    android:keepScreenOn="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="12dp">
 
         <TextView
+            android:textColor="#000000"
+            android:textSize="24sp"
             android:id="@+id/textview_player1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/got"
-            android:text="player1" />
+            android:text="player1"
+            android:fontFamily="@font/got"/>
 
         <TextView
             android:id="@+id/textview_player1score"
@@ -27,9 +31,13 @@
             android:layout_marginLeft="8dp"
             android:layout_toEndOf="@id/textview_player1"
             android:layout_toRightOf="@id/textview_player1"
-            android:text="score" />
+            android:text="score"
+            android:fontFamily="@font/got"
+            android:textSize="24sp"/>
 
         <TextView
+            android:textColor="#000000"
+            android:textSize="24sp"
             android:fontFamily="@font/got"
             android:id="@+id/textview_player2"
             android:layout_width="wrap_content"
@@ -44,7 +52,9 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:layout_toLeftOf="@id/textview_player2"
-            android:text="score" />
+            android:text="score"
+            android:fontFamily="@font/got"
+            android:textSize="24sp"/>
 
     </RelativeLayout>
 
