refactored game logic with game initializers
need to add
- pause button
- sound
- db save and statistics

--- a/app/src/main/res/layout-land/fragment_home_screen.xml
+++ b/app/src/main/res/layout-land/fragment_home_screen.xml
@@ -6,7 +6,7 @@
     tools:ignore="MissingDefaultResource"
     android:background="@drawable/background_image_main">
 
-    <ImageButton
+    <!--<ImageButton
         android:id="@+id/imagebutton_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
 
         <ImageButton
             android:layout_weight="1"
-            android:onClick="setFragmentNewGame"
+            android:onClick="onClickGameStart"
             android:id="@+id/imagebutton_play"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -101,6 +101,6 @@
             android:layout_gravity="center"
             />
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 </LinearLayout>
