--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,105 @@
     android:background="@drawable/background_image_main"
     android:keepScreenOn="true"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/layout_main">
 
 
-    <RelativeLayout
-        android:id="@+id/layout_main"
+    <ImageButton
+        android:id="@+id/imagebutton_about"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_about"
+        android:backgroundTint="#0000"
+        android:layout_gravity="right"
+        />
+
+    <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <FrameLayout
-            android:id="@+id/fragment_main"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:onClick="onClickOpenStatistics"
+            android:layout_weight="1"
+            android:id="@+id/imagebutton_previousgames"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>
-    </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:backgroundTint="#0000"
+            android:scaleType="fitCenter"
+            android:padding="40dp"
+            android:src="@drawable/button_previousgames" />
+
+        <ImageButton
+            android:layout_weight="1"
+            android:onClick="onClickGameStart"
+            android:id="@+id/imagebutton_play"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:backgroundTint="#0000"
+            android:scaleType="fitCenter"
+            android:src="@drawable/button_play_green" />
+
+
+        <ImageButton
+            android:onClick="onClickOpenSettings"
+            android:layout_weight="1"
+            android:id="@+id/imagebutton_settings"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:backgroundTint="#0000"
+            android:scaleType="fitCenter"
+            android:padding="20dp"
+            android:src="@drawable/button_settings2" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scores"
+            android:textSize="32sp"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Play"
+            android:textSize="32sp"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Settings"
+            android:textSize="32sp"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
