--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_gameplay"
@@ -9,6 +9,34 @@
     android:orientation="vertical"
     android:keepScreenOn="true"
     android:background="@drawable/background_dorn_field"
-    android:padding="12dp">
+    android:paddingLeft="12dp"
+    android:paddingBottom="12dp"
+    android:paddingRight="12dp">
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <ImageButton
+        android:id="@+id/imagebutton_pause"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_pause"
+        android:backgroundTint="#0000"
+        android:layout_gravity="left"
+        android:onClick="pauseGameOnClick"
+        />
+    <TextView
+        android:id="@+id/textView_timeLeft"
+        android:text="00:00"
+        android:layout_alignParentRight="true"
+        android:textColor="#FFFFFF"
+        android:textSize="28sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/layout_gameplay_surface"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
