--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -4,11 +4,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_westeros"
-    tools:context=".activities.statistics.StatisticsActivity">
+    tools:context=".activities.statistics.StatisticsActivity"
+    android:keepScreenOn="true">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_statistics"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageButton
+                android:onClick="onClickGoBack"
+                android:tint="#FFFFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_back"
+                android:backgroundTint="#0000"
+                android:layout_gravity="left"
+                />
+            <ImageButton
+                android:onClick="deleteAllMatches"
+                android:background="@drawable/ic_delete"
+                android:layout_alignParentRight="true"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="10dp" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/statistics_recycler_empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/got"
+            android:visibility="gone"
+            android:textSize="28sp"
+            android:gravity="center"
+            android:text="No matches to show" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_statistics"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
